# neweer-tray

./: .gitignore  README.md  build.zig
.github/workflows/: release.yml
frida/: README.md  agent.ts  index.ts  package.json  trace_all_opens.ts  trace_deep.ts  trace_dll.ts  trace_from_start.ts
scripts/: analyze_dll.py  analyze_protocol.py  analyze_send_rf.py  create_icon.py  debug_hid_enum.py  deep_hook.py  deep_usb_scan.py  discover_vidpid.py  enumerate_hid.py  find_neewer_device.py  frida_hook.py  hook_hidapi.py  list_all_hid.py  neewer_control.py  pyproject.toml  test_ble_usb_lib.py  test_direct_hid.py  test_direct_protocol.py  test_hid_caps.py  test_libusb.py  test_neewer_dll.py  test_usb_direct.py  test_win32_hid.py  trigger_send.py
src/: icon.rc  main.zig
